<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary"
    android:id="@+id/linearLayout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:weightSum="1"
    android:orientation="vertical">

    <ImageView android:src="@drawable/lettering_brancoc"
        android:layout_width="wrap_content"
        android:layout_height="174dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageView" />

    <!--email Label -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/secondary_text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <!--Password Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:maxLines="1"
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/secondary_text" />
    </android.support.design.widget.TextInputLayout>


    <!-- Login Button -->

    <Button
        android:id="@+id/bLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/icons"
        android:text="@string/b_login"
        android:textColor="@color/colorPrimary" />

    <!-- Link to Login Screen -->

    <Button
        android:id="@+id/bRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:text="@string/link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/providers"
        android:gravity="center_horizontal"
        android:layout_weight="0.28"
        android:textStyle="normal|bold"
        android:layout_height="8dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/github_button"
            android:layout_width="50dp"
            android:background="@drawable/github2"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button_facebook"
            android:background="@drawable/facebooklindo"
            android:layout_gravity="center_horizontal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/sign_in_button"
            android:background="@drawable/googlelindo"
            android:layout_gravity="end"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




    </LinearLayout>


</LinearLayout>
