<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:weightSum="1"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView android:src="@drawable/lettering_brancoc"
        android:layout_width="wrap_content"
        android:layout_height="174dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageView" />

    <!--email Label -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/github_username"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/secondary_text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <!--Password Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:maxLines="1"
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/github_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/secondary_text" />
    </android.support.design.widget.TextInputLayout>


    <!-- Login Button -->

    <Button
        android:id="@+id/bLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/icons"
        android:text="@string/b_login"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
