<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    card_view:cardBackgroundColor="@color/white"
    android:layout_margin="8dp"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/date"
            android:textColor="@color/primary_text"
            android:textSize="14dp"
            android:layout_alignBaseline="@+id/title"
            android:layout_alignBottom="@+id/title"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/item_cons_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/cons_medio"
            android:textColor="@color/primary_text"
            android:textSize="14dp"
            android:layout_below="@+id/item_dist_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/item_cons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="8dp"
            android:text="Cons Value"
            android:textColor="@color/primary_text"
            android:textSize="14dp"
            android:layout_below="@+id/item_dist_text"
            android:layout_toRightOf="@+id/item_cons_text"
            android:layout_toEndOf="@+id/item_cons_text" />

        <TextView
            android:id="@+id/session_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="8dp"
            android:text='Sessão:'
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/item_dist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="8dp"
            android:text="@string/dist_percorrida"
            android:textColor="@color/primary_text"
            android:textSize="14dp"
            android:layout_below="@+id/session_id"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/item_dist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="8dp"
            android:text="dist_value"
            android:textColor="@color/primary_text"
            android:textSize="14dp"
            android:layout_below="@+id/item_id"
            android:layout_toRightOf="@+id/item_dist_text"
            android:layout_toEndOf="@+id/item_dist_text" />

        <TextView
            android:id="@+id/item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="22dp"
            android:text="id"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/session_id"
            android:layout_toLeftOf="@+id/item_dist"
            android:layout_toStartOf="@+id/item_dist" />

    </RelativeLayout>
</android.support.v7.widget.CardView>